# Colo_Course

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.json
.github/workflows/: android.yml  ci.yml  desktop.yml  release.yml
android/: AndroidManifest.xml
android/res/drawable/: ic_launcher_foreground.xml  ic_stat_notify.xml
android/res/values/: colors.xml  styles.xml
android/src/org/colocourse/app/: Notifier.java  Platform.java
docs/: PLAN.md  SPEC.md
scripts/: build-android-deps.sh  build-android.sh  build-appimage.sh  make-release-key.sh  setup-android.sh  setup-dev.sh
src/: CMakeLists.txt
src/app/: appcontroller.cpp  appcontroller.h  itemmodel.cpp  itemmodel.h  main.cpp  notifier.cpp  notifier.h  permissions.cpp  permissions.h  platform.cpp  platform.h  qrdecode.cpp  qrdecode.h  qrimageprovider.cpp  qrimageprovider.h  qrscanner.cpp  qrscanner.h  syncengine.cpp  syncengine.h  theme.cpp  theme.h  updater.cpp  updater.h
src/core/: crdt.cpp  crdt.h  csv.cpp  csv.h  pairing.cpp  pairing.h  payload.cpp  payload.h  types.h  zip.cpp  zip.h
src/net/: crypto.cpp  crypto.h  nostr.cpp  nostr.h  relayclient.cpp  relayclient.h  relaypool.cpp  relaypool.h
src/qml/: AisleBox.qml  ColoDialog.qml  ColoMenu.qml  ColoTextField.qml  FilePickers.qml  Icon.qml  ListPage.qml  ListsPage.qml  Main.qml  ScanPage.qml  ShareSheet.qml  Theme.qml
src/store/: database.cpp  database.h
tests/: CMakeLists.txt  tst_crdt.cpp  tst_crypto.cpp  tst_database.cpp  tst_dataexchange.cpp  tst_itemmodel.cpp  tst_pairing.cpp  tst_payload.cpp  tst_qml.cpp  tst_qrdecode.cpp  tst_relay.cpp  tst_smoke.cpp  tst_sync.cpp
